gcc-9 (9.3.0-4) UNRELEASED; urgency=medium

  * Update to git 20200316 from the gcc-9 branch.
    - Fix PR tree-optimization/94163, PR rtl-optimization/94119,
      PR target/87560 (PPC), PR target/91913 (ARM), PR target/93800 (PPC),
      PR c++/92909, PR c++/92068, PR c++/93248, PR libstdc++/94063,
      PR libstdc++/93244.
  * Build using GCC 9 again.

 -- Matthias Klose <doko@debian.org>  Mon, 16 Mar 2020 11:49:23 +0100

gcc-9 (9.3.0-3) unstable; urgency=high

  * Ship the include-fixed directory again, for a working #include <limits.h>.
  * Build using GCC 8.

 -- Matthias Klose <doko@debian.org>  Fri, 13 Mar 2020 09:37:07 +0100

gcc-9 (9.3.0-1) unstable; urgency=medium

  * GCC 9.3.0 release.
  * Update newlib to 3.3.0.
  * Update gm2 from the gcc_9_2_0_gm2 branch 202003114.
  * For all runtime libraries, generate dependencies on libgcc-sN instead
    on libgccN.
  * Stop shipping the include-fixed directory.
  * Refresh patches.
  * Tighten dependency on libc6 for this upload.

 -- Matthias Klose <doko@debian.org>  Thu, 12 Mar 2020 15:24:59 +0100

gcc-9 (9.2.1-31) unstable; urgency=medium

  * GCC 9.3.0 release candidate.
  * Update to git 20200304 from the gcc-9 branch.
    - Fix PR c/93949, PR tree-optimization/93945, PR target/91276 (PPC),
      PR c++/92003, PR target/93047 (PPC), PR tree-optimization/93820,
      PR rtl-optimization/93908, PR tree-optimization/93767, PR c++/92745,
      PR c++/90951, PR c++/93140, PR c++/92852, PR libstdc++/93205,
      PR libstdc++/92886, PR libstdc++/93325, PR libstdc++/93562,
      PR libstdc++/92376, PR libstdc++/78552, PR rtl-optimization/94002,
      PR c++/92601,i PR other/93965, PR c++/86917, PR c++/91953,
      PR c++/88256, PR c++/93442, PR c++/90732, PR c++/90333, PR c++/89640,
      PR c++/60503, PR libbacktrace/91908, PR lto/93966,
      PR target/94046 (x86), PR target/90311 (ARM), PR sanitizer/93436,
      PR c++/88395, PR c++/93551, PR gcov-profile/93753, PR c++/90338,