@@ -2183,16 +2183,9 @@ ifeq ($(with_hppa64),yes)
 
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/include
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/lib
-	set -e; \
-	  cd $(d)/$(PF)/$(libdir)/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed; \
-	  for i in *; do \
-	    case "$$i" in \
-	      README|features.h|syslimits.h|limits.h) ;; \
-	      linux|$(TARGET_ALIAS)) ;; \
-	      $(subst $(DEB_TARGET_GNU_CPU),$(biarch_cpu),$(TARGET_ALIAS))) ;; \
-	      *) echo "remove include-fixed/$$i"; rm -rf $$i; \
-	    esac; \
-	  done
+	mv $(d)/$(PF)/hppa64-linux-gnu/$(versiondir)/include-fixed/{limits,syslimits}.h \
+	  $(d)/$(PF)/hppa64-linux-gnu/$(versiondir)/include/.
+	rm -rf $(d)/$(PF)/$(libdir)/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed
 endif
 
 	: # Work around PR lto/41569
@@ -2221,16 +2214,9 @@ endif
 	else \
 	  rm -f $(d)/$(PF)/bin/$(TARGET_ALIAS)-gcc-9*; \
 	fi
-	set -e; \
-	  cd $(d)/$(gcc_lib_dir)/include-fixed; \
-	  for i in *; do \
-	    case "$$i" in \
-	      README|features.h|syslimits.h|limits.h) ;; \
-	      linux|$(TARGET_ALIAS)) ;; \
-	      $(subst $(DEB_TARGET_GNU_CPU),$(biarch_cpu),$(TARGET_ALIAS))) ;; \
-	      *) echo "remove include-fixed/$$i"; rm -rf $$i; \
-	    esac; \
-	  done
+	mv $(d)/$(gcc_lib_dir)/include-fixed/{limits,syslimits}.h \
+	  $(d)/$(gcc_lib_dir)/include/.
+	rm -rf $(d)/$(gcc_lib_dir)/include-fixed
 
 ifneq ($(configured_libdir),$(libdir))
 	for i in ada debug go pkgconfig '*.so' '*.so.*' '*.a' '*.la' '*.py' '*.spec'; do \
@@ -2304,6 +2290,10 @@ endif
 	    infodir=/$(PF)/share/info \
 	    mandir=/$(PF)/share/man \
 		install
+
+	mv $(d)/$(gcc_lib_dir)/include-fixed/{limits,syslimits}.h \
+	  $(d)/$(gcc_lib_dir)/include/.
+	rm -rf $(d)/$(gcc_lib_dir)/include-fixed
 
 ifeq ($(DEB_STAGE)-$(DEB_CROSS),rtlibs-yes)
 	@echo configured_libdir=$(configured_libdir) / libdir=$(libdir) / usr_lib=$(usr_lib)
@@ -2514,6 +2504,10 @@ $(install_hppa64_stamp): $(build_hppa64_stamp)
 
 	rm -rf $(d_hppa64)/$(PF)/hppa64-linux-gnu
 	rm -rf $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/install-tools
+
+	mv $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include-fixed/{limits,syslimits}.h \
+	  $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include/.
+	rm -rf $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include-fixed
 
 ifeq ($(versioned_packages),yes)
 	for i in cpp gcc-ar gcc-nm gcc-ranlib; do \
