@@ -6,6 +6,8 @@ gcc-9 (9.3.0-4) UNRELEASED; urgency=medium
       PR c++/92909, PR c++/92068, PR c++/93248, PR libstdc++/94063,
       PR libstdc++/93244.
   * Build using GCC 9 again.
+  * Move limits.h and syslimits.h into <gcc-lib-dir>/include, and remove
+    <gcc-lib-dir>/include-fixed.
 
  -- Matthias Klose <doko@debian.org>  Mon, 16 Mar 2020 11:49:23 +0100
 
